@@ -79,7 +79,7 @@ import sun.security.util.Debug;
  * itself. For example, the entity may authenticate itself using different
  * certificate authorities, or using different public key algorithms.
  *
- * <p> Whether aliases are case sensitive is implementation dependent. In order
+ * <p> Whether aliases are case-sensitive is implementation dependent. In order
  * to avoid problems, it is recommended not to use aliases in a KeyStore that
  * only differ in case.
  *
@@ -210,13 +210,13 @@ public class KeyStore {
     private static final String KEYSTORE_TYPE = "keystore.type";
 
     // The keystore type
-    private String type;
+    private final String type;
 
     // The provider
-    private Provider provider;
+    private final Provider provider;
 
     // The provider implementation
-    private KeyStoreSpi keyStoreSpi;
+    private final KeyStoreSpi keyStoreSpi;
 
     // Has this keystore been initialized (loaded)?
     private boolean initialized;
@@ -230,13 +230,13 @@ public class KeyStore {
      *
      * @since 1.5
      */
-    public static interface LoadStoreParameter {
+    public interface LoadStoreParameter {
         /**
          * Gets the parameter used to protect keystore data.
          *
          * @return the parameter used to protect keystore data, or null
          */
-        public ProtectionParameter getProtectionParameter();
+        ProtectionParameter getProtectionParameter();
     }
 
     /**
@@ -251,7 +251,7 @@ public class KeyStore {
      *
      * @since 1.5
      */
-    public static interface ProtectionParameter { }
+    public interface ProtectionParameter { }
 
     /**
      * A password-based implementation of {@code ProtectionParameter}.
@@ -419,7 +419,7 @@ public class KeyStore {
      *
      * @since 1.5
      */
-    public static interface Entry {
+    public interface Entry {
 
         /**
          * Retrieves the attributes associated with an entry.
@@ -431,8 +431,8 @@ public class KeyStore {
          *
          * @since 1.8
          */
-        public default Set<Attribute> getAttributes() {
-            return Collections.<Attribute>emptySet();
+        default Set<Attribute> getAttributes() {
+            return Collections.emptySet();
         }
 
         /**
@@ -441,21 +441,21 @@ public class KeyStore {
          *
          * @since 1.8
          */
-        public interface Attribute {
+        interface Attribute {
             /**
              * Returns the attribute's name.
              *
              * @return the attribute name
              */
-            public String getName();
+            String getName();
 
             /**
              * Returns the attribute's value.
-             * Multi-valued attributes encode their values as a single string.
+             * Multivalued attributes encode their values as a single string.
              *
              * @return the attribute value
              */
-            public String getValue();
+            String getValue();
         }
     }
 
@@ -496,7 +496,7 @@ public class KeyStore {
          *      in the end entity {@code Certificate} (at index 0)
          */
         public PrivateKeyEntry(PrivateKey privateKey, Certificate[] chain) {
-            this(privateKey, chain, Collections.<Attribute>emptySet());
+            this(privateKey, chain, Collections.emptySet());
         }
 
         /**
@@ -565,7 +565,7 @@ public class KeyStore {
             }
 
             this.attributes =
-                Collections.unmodifiableSet(new HashSet<>(attributes));
+                    Set.copyOf(attributes);
         }
 
         /**
@@ -659,7 +659,7 @@ public class KeyStore {
                 throw new NullPointerException("invalid null input");
             }
             this.sKey = secretKey;
-            this.attributes = Collections.<Attribute>emptySet();
+            this.attributes = Collections.emptySet();
         }
 
         /**
@@ -684,7 +684,7 @@ public class KeyStore {
             }
             this.sKey = secretKey;
             this.attributes =
-                Collections.unmodifiableSet(new HashSet<>(attributes));
+                    Set.copyOf(attributes);
         }
 
         /**
@@ -742,7 +742,7 @@ public class KeyStore {
                 throw new NullPointerException("invalid null input");
             }
             this.cert = trustedCert;
-            this.attributes = Collections.<Attribute>emptySet();
+            this.attributes = Collections.emptySet();
         }
 
         /**
@@ -767,7 +767,7 @@ public class KeyStore {
             }
             this.cert = trustedCert;
             this.attributes =
-                Collections.unmodifiableSet(new HashSet<>(attributes));
+                    Set.copyOf(attributes);
         }
 
         /**
@@ -841,7 +841,7 @@ public class KeyStore {
      * {@code jdk.security.provider.preferred}
      * {@link Security#getProperty(String) Security} property to determine
      * the preferred provider order for the specified algorithm. This
-     * may be different than the order of providers returned by
+     * may be different from the order of providers returned by
      * {@link Security#getProviders() Security.getProviders()}.
      *
      * @param type the type of keystore.
@@ -867,10 +867,8 @@ public class KeyStore {
         try {
             Object[] objs = Security.getImpl(type, "KeyStore", (String)null);
             return new KeyStore((KeyStoreSpi)objs[0], (Provider)objs[1], type);
-        } catch (NoSuchAlgorithmException nsae) {
+        } catch (NoSuchAlgorithmException | NoSuchProviderException nsae) {
             throw new KeyStoreException(type + " not found", nsae);
-        } catch (NoSuchProviderException nspe) {
-            throw new KeyStoreException(type + " not found", nspe);
         }
     }
 
@@ -987,13 +985,10 @@ public class KeyStore {
      * if no such property exists.
      * @see java.security.Security security properties
      */
-    public static final String getDefaultType() {
+    public static String getDefaultType() {
         @SuppressWarnings("removal")
-        String kstype = AccessController.doPrivileged(new PrivilegedAction<>() {
-            public String run() {
-                return Security.getProperty(KEYSTORE_TYPE);
-            }
-        });
+        String kstype = AccessController.doPrivileged((PrivilegedAction<String>) () ->
+            Security.getProperty(KEYSTORE_TYPE));
         if (kstype == null) {
             kstype = "jks";
         }
@@ -1705,7 +1700,7 @@ public class KeyStore {
      *
      * @since 9
      */
-    public static final KeyStore getInstance(File file, char[] password)
+    public static KeyStore getInstance(File file, char[] password)
         throws KeyStoreException, IOException, NoSuchAlgorithmException,
             CertificateException {
         return getInstance(file, password, null, true);
@@ -1761,14 +1756,14 @@ public class KeyStore {
      *
      * @since 9
      */
-    public static final KeyStore getInstance(File file,
+    public static KeyStore getInstance(File file,
         LoadStoreParameter param) throws KeyStoreException, IOException,
             NoSuchAlgorithmException, CertificateException {
         return getInstance(file, null, param, false);
     }
 
     // Used by getInstance(File, char[]) & getInstance(File, LoadStoreParameter)
-    private static final KeyStore getInstance(File file, char[] password,
+    private static KeyStore getInstance(File file, char[] password,
         LoadStoreParameter param, boolean hasPassword)
             throws KeyStoreException, IOException, NoSuchAlgorithmException,
                 CertificateException {
@@ -1777,7 +1772,7 @@ public class KeyStore {
             throw new NullPointerException();
         }
 
-        if (file.isFile() == false) {
+        if (!file.isFile()) {
             throw new IllegalArgumentException(
                 "File does not exist or it does not refer to a normal file: " +
                     file);
@@ -1918,7 +1913,7 @@ public class KeyStore {
             if ((keyStore == null) || (protectionParameter == null)) {
                 throw new NullPointerException();
             }
-            if (keyStore.initialized == false) {
+            if (!keyStore.initialized) {
                 throw new IllegalArgumentException("KeyStore not initialized");
             }
             return new Builder() {
@@ -1934,7 +1929,7 @@ public class KeyStore {
                     if (alias == null) {
                         throw new NullPointerException();
                     }
-                    if (getCalled == false) {
+                    if (!getCalled) {
                         throw new IllegalStateException
                             ("getKeyStore() must be called first");
                     }
@@ -2056,7 +2051,7 @@ public class KeyStore {
             private final String type;
             private final Provider provider;
             private final File file;
-            private ProtectionParameter protection;
+            private final ProtectionParameter protection;
             private ProtectionParameter keyProtection;
             @SuppressWarnings("removal")
             private final AccessControlContext context;
@@ -2110,7 +2105,7 @@ public class KeyStore {
                     }
                     public KeyStore run0() throws Exception {
                         KeyStore ks;
-                        char[] password = null;
+                        char[] password;
 
                         // Acquire keystore password
                         if (protection instanceof PasswordProtection) {
@@ -2214,7 +2209,7 @@ public class KeyStore {
                 private IOException oldException;
 
                 private final PrivilegedExceptionAction<KeyStore> action
-                        = new PrivilegedExceptionAction<KeyStore>() {
+                        = new PrivilegedExceptionAction<>() {
 
                     public KeyStore run() throws Exception {
                         KeyStore ks;
@@ -2274,7 +2269,7 @@ public class KeyStore {
                     if (alias == null) {
                         throw new NullPointerException();
                     }
-                    if (getCalled == false) {
+                    if (!getCalled) {
                         throw new IllegalStateException
                             ("getKeyStore() must be called first");
                     }
